<resources>
    <string name="app_name">RecyclerView</string>
    <string name="crear_publicaci_n">Crear Publicación</string>
    <string name="aceptar">Aceptar</string>
    <string name="imagen_del_producto">Imagen del producto</string>
    <string name="nombre">Nombre</string>
    <string name="descripci_n">Descripción</string>
    <string name="cargar_imagen">Cargar Imagen</string>
    <string name="precio">Precio</string>
    <string name="cantidad">Cantidad</string>
    <string name="precio_visible">Precio visible</string>
    <string name="nombre_del_producto">Nombre del producto</string>
    <string name="descripci_n_del_producto">Descripción del producto</string>
    <string name="precio_del_producto">Precio del producto</string>
    <string name="cantidad_del_producto">Cantidad del producto</string>
    <string name="filter">Filtrar RecyclerView items</string>
    <string name="añadir_producto">Añadir producto</string>
    <string name="men_principal">Menú Principal</string>
    <string name="consultar_perfil">CONSULTAR PERFIL</string>
    <string name="consultar_perfil2">Consultar Perfil</string>
    <string name="perfil_del_usuario">Perfil del Usuario</string>
    <string name="correo_electr_nico">Correo Electrónico</string>
    <string name="correo">correo</string>
    <string name="direcci_n">Dirección</string>
    <string name="dir_solo_visible_si_es_empresa">dir/solo visible si es empresa</string>
    <string-array name="edadSpinner">
        <item>-18</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>60+</item>
    </string-array>
    <string-array name="spinnerReporte">
        <item>Spam</item>
        <item>Publicacion ofensiva</item>
        <item>Contenido sexual</item>
        <item>No es un producto</item>
        <item>Estafa</item>
        <item>Otro</item>
    </string-array>
</resources>