<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".InterfazPerfil">

    <TextView
            android:text="@string/perfil_del_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView11"
            android:textSize="24sp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" android:layout_marginBottom="18dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"/>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="378dp"
            android:layout_height="344dp"
            android:background="#4CAF50" android:id="@+id/constraintLayout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.268"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.484">

        <TextView
                android:text="@string/correo_electr_nico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView13"
                android:textSize="16sp" android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="17dp"
                android:layout_marginBottom="67dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="19dp" app:layout_constraintBottom_toTopOf="@+id/textView16"/>
        <TextView
                android:text="@string/correo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView14"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="40dp" android:layout_marginStart="11dp"
                android:layout_marginBottom="48dp" app:layout_constraintBottom_toTopOf="@+id/textView16"/>
        <TextView
                android:text="@string/direcci_n"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView15"
                android:textSize="16sp" android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="88dp" android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView16" android:layout_marginBottom="99dp"/>
        <TextView
                android:text="@string/dir_solo_visible_si_es_empresa"
                android:layout_width="0dp"
                android:layout_height="0dp" android:id="@+id/textView16"
                app:layout_constraintTop_toBottomOf="@+id/textView14" android:layout_marginBottom="136dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="11dp" android:layout_marginEnd="11dp"
                app:layout_constraintHorizontal_bias="0.5"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>